<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/AlertDialogCustom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/filter_dialog_title"
        android:textColor="@android:color/black" />

    <RadioButton
        android:id="@+id/radiobutton_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:text="@string/new_name" />

    <RadioButton
        android:id="@+id/radiobutton_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:text="@string/date" />

    <RadioButton
        android:id="@+id/radiobutton_weekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:text="@string/weekday" />

</LinearLayout>