<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="main.com.fitnesstracker.views.main.MainActivity">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:title="@string/action_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/title_rename"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
