<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:theme="@style/AppTheme">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fillText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorDarkSecondary"
                android:text=""
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstAttributeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="34dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorDarkSecondary"
                android:text="@string/repetitions"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/secondAttributeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorDarkSecondary"
                android:text="@string/weight"
                android:textColor="@color/colorWhite"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewSet"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/leer"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstAttributeEditText"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:autofillHints="2"
                android:ems="10"
                android:hint="@string/leer"
                android:inputType="numberSigned"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorDarkSecondaryLight"
                app:layout_constraintStart_toEndOf="@+id/textViewSet"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/secondAttributeEditText"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:autofillHints="2"
                android:ems="10"
                android:hint="@string/leer"
                android:inputType="numberSigned"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorDarkSecondaryLight"
                app:layout_constraintStart_toEndOf="@+id/firstAttributeEditText"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>